fix(campuses): fix quote text to wrap on IE (#299)

--- a/src/components/structural/home-campuses/home-campuses.module.css
+++ b/src/components/structural/home-campuses/home-campuses.module.css
@@ -210,6 +210,7 @@
   font-size: 14px;
   line-height: 24px;
   text-align: left;
+  width: 100%;
 
   strong {
     @mixin font-family font-sans-serif-regular;
